syntax = "proto3";

package buildbarn.configuration.global;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/global";

message JaegerConfiguration {
  // Jaeger agent endpoint.
  string agent_endpoint = 1;

  // Jaeger collector endpoint.
  string collector_endpoint = 2;

  // OpenTracing service name.
  string service_name = 3;
}

message StackdriverConfiguration {
  // GCP project to which trace data is sent.
  // Can be left blank if in GCP, automatically determined from metadata server.
  string project_id = 1;

  // Location is the identifier of the GCP or AWS cloud region/zone in which
  // the data for a resource is stored. (defaults to info from metadata server)
  string location = 2;

  // Additional attributes to add to all spans by default.
  map<string, string> default_trace_attributes = 3;
}

message BasicAuthenticationConfiguration {
  // Username to store in the "Authorization: Basic" header.
  string username = 1;

  // Password to store in the "Authorization: Basic" header.
  string password = 2;
}

message PrometheusPushgatewayConfiguration {
  // URL of the Prometheus Pushgateway server. Do not include the
  // "/metrics/jobs/..." part in the URL.
  string url = 1;

  // Name of the job to announce to the Prometheus Pushgateway.
  string job = 2;

  // If set, enable the use of HTTP basic authentication.
  BasicAuthenticationConfiguration basic_authentication = 3;

  // Label pairs to use as the grouping key.
  map<string, string> grouping = 4;

  // Interval between metrics pushes.
  google.protobuf.Duration push_interval = 5;
}

// Parameters for a "token bucket" for deciding when to sample.
message ConstantRateSamplingPolicy {
  // Number of tokens to put in the bucket per second.
  int32 tokens_per_second = 1;

  // Maximum number of tokens that may be held in the bucket.
  int32 max_tokens = 2;

  // Number of tokens required to consume from the bucket to sample a trace.
  int32 tokens_per_sample = 3;
}

message TracingConfiguration {
  // Jaeger configuration for tracing.
  JaegerConfiguration jaeger = 1;

  // Stackdriver Trace configuration for tracing.
  StackdriverConfiguration stackdriver = 2;

  // Export stats on traces to Prometheus.
  bool enable_prometheus = 3;

  // Policy to use to decide to sample traces.
  oneof sampling_policy {
    // Sample all traces.
    google.protobuf.Empty sample_always = 5;

    // Never sample traces.
    google.protobuf.Empty sample_never = 6;

    // Probability in range [0, 1.0] with which to sample a trace.
    // (Traces with a parent trace will also be sampled.)
    double sample_probability = 7;

    // Constant rate sampling policy.
    ConstantRateSamplingPolicy sample_constant_rate = 8;
  }
}

message SetUmaskConfiguration {
  // The value of the file creation mode mask to be passed to umask().
  uint32 umask = 1;
}

message Configuration {
  // Configuration for sending tracing data to various services.
  TracingConfiguration tracing = 1;

  // Sets the runtime.SetMutexProfileFraction(), so that the HTTP debug
  // endpoints used by pprof expose mutex profiling information.
  int32 mutex_profile_fraction = 2;

  // Periodically push metrics to a Prometheus Pushgateway, as opposed
  // to letting the Prometheus server scrape the metrics.
  PrometheusPushgatewayConfiguration prometheus_pushgateway = 3;

  // Was diagnostics_http_listen_address, which has been replaced with
  // diagnostics_http_server.
  reserved 4;

  // Pathnames where, in addition to stderr, application logs are
  // written. Parent directories of the specified paths must exist.
  repeated string log_paths = 5;

  // When set, enables a HTTP server that provides diagnostic information.
  DiagnosticsHTTPServerConfiguration diagnostics_http_server = 6;

  // Call umask() on startup to set the file creation mode mask. It may
  // be necessary to set this option in multi-user environments to
  // ensure that files and UNIX sockets that are created are accessible
  // by other processes.
  //
  // This option may only be set on POSIX-like systems.
  SetUmaskConfiguration set_umask = 7;
}

message DiagnosticsHTTPServerConfiguration {
  // Default endpoints:
  // - /-/healthy: Returns HTTP 200 OK if the application managed to
  //               start successfully.
  string listen_address = 1;

  // Enables endpoints:
  // - /debug/pprof/*: Endpoints for Go's pprof debug tool.
  bool enable_pprof = 2;

  // Enables endpoints:
  // - /metrics: Metrics that can be scraped by Prometheus.
  bool enable_prometheus = 3;
}
